<!-- Object 1 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#C7DDE4"
    android:visibility="visible">

    <ImageView
        android:id="@+id/beehiveIcon"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="251dp"
        android:layout_marginTop="297dp"
        android:elevation="4dp"
        app:srcCompat="@drawable/beehive_1" />

    <ImageView
        android:id="@+id/honeyIcon"
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/honeyCombIcon"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/to_do_text"
        android:layout_width="164dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="263dp"
        android:elevation="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/to_do_list_"
        android:textAppearance="@style/to_do_list_" />


    <TextView
        android:id="@+id/aff_text"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="155dp"
        android:elevation="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/aff"
        android:textAppearance="@style/to_do_list_" />

    <TextView
        android:id="@+id/rem_text"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="607dp"
        android:elevation="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/rem"
        android:textAppearance="@style/to_do_list_" />

    <View
        android:id="@+id/to_do_list_"
        android:layout_width="238dp"
        android:layout_height="328dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="255dp"
        android:background="@drawable/toDo"
        android:elevation="4dp" />

    <View
        android:id="@+id/affirmation"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="133dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="500dp"
        android:background="@drawable/affBox"
        android:elevation="4dp" />

    <View
        android:id="@+id/remBox"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="603dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/affBox"
        android:elevation="4dp" />

    <View
        android:id="@+id/bee_logo"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#E9BB00" />

    <TextView
        android:id="@+id/the_busy_be"
        android:layout_width="270dp"
        android:layout_height="74dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/the_busy_be"
        android:textAppearance="@style/the_busy_be" />

</RelativeLayout>